@@ -1,6 +1,6 @@
 ##############################################################################
 #
-# Copyright (c) 2007 Zope Foundation and Contributors.
+# Copyright (c) 2007-2009 Zope Foundation and Contributors.
 # All Rights Reserved.
 #
 # This software is subject to the provisions of the Zope Public License,
@@ -21,6 +21,9 @@ import zope.component
 from z3c.template.interfaces import ILayoutTemplate
 
 
+REDIRECT_STATUS_CODES = (301, 302, 303)
+
+
 class FormLayoutSupport(object):
     """Layout support for forms except IAddForm."""
 
@@ -28,6 +31,11 @@ class FormLayoutSupport(object):
 
     def __call__(self):
         self.update()
+
+        if self.request.response.getStatus() in REDIRECT_STATUS_CODES:
+            # don't bother rendering when redirecting
+            return ''
+
         if self.layout is None:
             layout = zope.component.getMultiAdapter((self, self.request),
                 ILayoutTemplate)
@@ -45,6 +53,7 @@ class AddFormLayoutSupport(object):
         if self._finishedAdd:
             self.request.response.redirect(self.nextURL())
             return ''
+
         if self.layout is None:
             layout = zope.component.getMultiAdapter((self, self.request),
                 ILayoutTemplate)
